# QtQuickDemo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml
src/: CMakeLists.txt  Card.qml  main.cpp  main.qml  main.qrc
